--- a/.travis.yml
+++ b/.travis.yml
@@ -14,20 +14,24 @@
 #  See the License for the specific language governing permissions and
 #  limitations under the License.
 
-dist: trusty
-sudo: required
+#dist: trusty
+#sudo: required
+sudo: false
 addons:
   chrome: stable
 
 install: true
 language: java
 jdk:
-  - oraclejdk8
+  - oraclejdk8  
+services:
+  - docker
+    
 before_install:
-  - export M2_HOME=$PWD/apache-maven-3.3.9
-  - export PATH=$M2_HOME/bin:$PATH
-  - '[[ -d $M2_HOME ]] || curl --retry 10 -O https://archive.apache.org/dist/maven/maven-3/3.3.9/binaries/apache-maven-3.3.9-bin.zip'
-  - '[[ -d $M2_HOME ]] || unzip -qq apache-maven-3.3.9-bin.zip'
+  # - export M2_HOME=$PWD/apache-maven-3.3.9
+  # - export PATH=$M2_HOME/bin:$PATH
+  # - '[[ -d $M2_HOME ]] || curl --retry 10 -O https://archive.apache.org/dist/maven/maven-3/3.3.9/binaries/apache-maven-3.3.9-bin.zip'
+  # - '[[ -d $M2_HOME ]] || unzip -qq apache-maven-3.3.9-bin.zip'
   - npm config set cache $HOME/.npm-cache --global
   - npm config set prefix $HOME/.npm-prefix --global
 
@@ -61,6 +65,11 @@ matrix:
     - name: Verify Licenses
       script:
         - time ./dev-utilities/build-utils/verify_licenses.sh
+
+    - name: Build RPMs
+      script:
+        - mvn install -T 2C -q -DskipTests=true -Dmaven.javadoc.skip=true -B -V
+        - mvn package -Pbuild-rpms -q -DskipTests=true -Dmaven.javadoc.skip=true -B -V 
 
 before_cache:
   - rm -rf $HOME/.m2/repository/org/apache/metron
